--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,100 +8,112 @@
   z-index: 5;
   background: #fff;
   box-shadow: 0px 1px 10px rgba(186, 186, 186, 0.25);
+
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  text-align: center;
-  height: 101px;
+    text-align: center;
+    height: 101px;
   }
 }
 
 .menu {
-  &__list{
+  &__list {
     display: flex;
 
   }
+
   &__item {
     margin-right: 40px;
-    
+
   }
-  
+
 }
 
 .btn {
-background: linear-gradient(88.48deg, #FF754A 0.79%, #FFB421 100%);
-    color: $white;
-    padding: 10px 35px;
-    border-radius: 4px;
-    
-  a{
+  background: linear-gradient(88.48deg, #FF754A 0.79%, #FFB421 100%);
+  color: $white;
+  padding: 10px 35px;
+  border-radius: 4px;
+
+  a {
     color: $white;
   }
 
 }
-.menu__lsit-link--soon{
+
+.menu__lsit-link--soon {
   position: relative;
-&::before{
-  content:'';
-  position: absolute;
-  background-image: url('../images/soon.svg');
-  top: -15px;
-  left: 150px;
-  right: 0;
-  width: 50px;
-  height: 20px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    background-image: url('../images/soon.svg');
+    top: -15px;
+    left: 150px;
+    right: 0;
+    width: 50px;
+    height: 20px;
+  }
 }
-}
+
 // header-end
 // BTN
-#menu-btn{
+#menu-btn {
   cursor: pointer;
   display: none;
 }
+
 // BTN end
 
 // section start
 .start {
-    background-image: url(../images/bg-start.png);
-  background-size: cover;
+  background-image: url(../images/bg-start.png);
+  background-repeat: no-repeat;
   background-position: top center;
-  
-    
+  background-size: 100% 90%;
+
+
   &__inner {
-        display: flex;
+    display: flex;
     padding-top: 68px;
-    justify-content: space-between;   
-    margin-bottom: 90px; 
+    justify-content: space-between;
+    margin-bottom: 90px;
   }
+
   &__info {
     max-width: 488px;
   }
+
   &__info-title {
     font-size: 38px;
     line-height: 120%;
     margin-bottom: 40px;
     padding-top: 50px;
     color: $white;
-    
+
   }
+
   &__info-text {
     margin-bottom: 40px;
     color: $white;
   }
- 
+
   &__link {
     display: inline-block;
     margin-bottom: 20px;
     color: $white;
-    
+
   }
+
   &__link-play {
     margin-bottom: 43px;
     text-align: left;
     margin-left: 47px;
     position: relative;
-    &::before{
+
+    &::before {
       content: '';
       position: absolute;
       width: 32px;
@@ -114,15 +126,17 @@ background: linear-gradient(88.48deg, #FF754A 0.79%, #FFB421 100%);
     }
   }
 }
-.start__link-treal{
-padding: 14px 28px;
-border-radius: 4px;
-background: linear-gradient(88.48deg, #FF754A 0.79%, #FFB421 100%);
+
+.start__link-treal {
+  padding: 14px 28px;
+  border-radius: 4px;
+  background: linear-gradient(88.48deg, #FF754A 0.79%, #FFB421 100%);
 }
-.start__link-demo{
-padding: 13px 57px;
-border: 0.7px solid #FFFFFF;
-border-radius: 4px;
+
+.start__link-demo {
+  padding: 13px 57px;
+  border: 0.7px solid #FFFFFF;
+  border-radius: 4px;
 }
 
 
@@ -133,19 +147,23 @@ border-radius: 4px;
     margin-bottom: 160px;
     flex-wrap: wrap;
   }
+
   &__box-item {
     background-color: #fff;
     max-width: 387px;
     box-shadow: 0px 4px 6px rgba(183, 183, 183, 0.25);
-border-radius: 10px;
+    border-radius: 10px;
   }
+
   &__box-images {
     display: flex;
     justify-content: end
   }
+
   &__box-item-img {
     padding: 28px 28px 0 0;
   }
+
   &__box-item-title {
     color: $blue;
     font-size: 38px;
@@ -153,6 +171,7 @@ border-radius: 10px;
     font-weight: 600;
     padding: 0 0 10px 40px;
   }
+
   &__box-item-text {
     padding: 0 30px 40px 40px;
   }
@@ -162,44 +181,48 @@ border-radius: 10px;
 
 // servises start
 .servises {
-  
+
   &__box {
     display: flex;
     justify-content: space-around;
     margin-bottom: 100px;
     align-items: center;
   }
-  
+
   &__info {
     max-width: 600px;
   }
-  &__info-text{
+
+  &__info-text {
     margin-bottom: 20px;
   }
+
   &__info-title {
     font-size: 28px;
-line-height: 130%;
-font-weight: 600;
-margin-bottom: 32px;
-padding-left: 43px;
-color: $blue;
-position: relative;
-&::before{
-  content: '';
-  position: absolute;
-  width: 44px;
-  height: 44px;
-  left: -9px;
-  top: -5px;
-  background-image: url(../images/servises/num-icon.svg);
-}
-  } 
-  
+    line-height: 130%;
+    font-weight: 600;
+    margin-bottom: 32px;
+    padding-left: 43px;
+    color: $blue;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 44px;
+      height: 44px;
+      left: -9px;
+      top: -5px;
+      background-image: url(../images/servises/num-icon.svg);
+    }
+  }
+
   &__info-item {
     margin-bottom: 16px;
     padding-left: 40px;
     position: relative;
-    &::before{
+
+    &::before {
       content: '';
       position: absolute;
       top: 7px;
@@ -211,50 +234,58 @@ position: relative;
 
     }
   }
+
   &__info-btn {
-        padding: 12px 34px;
-        border: 0.7px solid #212121;
-        border-radius: 4px;
-        margin-top: 40px;
+    padding: 12px 34px;
+    border: 0.7px solid #212121;
+    border-radius: 4px;
+    margin-top: 40px;
   }
 }
-.servises__box{
-position: relative;
-  &::after{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 379px;
-  height: 220px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url(../images/servises/bg-scr.svg);
-  z-index: -1;
+
+.servises__box {
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 379px;
+    height: 220px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../images/servises/bg-scr.svg);
+    z-index: -1;
   }
 }
-.servises__buttons{
+
+.servises__buttons {
   margin-top: 36px;
-  
+
 }
+
 .title {
   &__all {
     font-size: 32px;
-line-height: 120%;
-text-align: center;
-margin-bottom: 81px;
+    line-height: 120%;
+    text-align: center;
+    margin-bottom: 81px;
   }
 }
+
 .link-treal {
   background-color: $blue;
   border: none;
   color: $white;
   margin-right: 36px;
 }
-.servises__box-right{
-flex-direction: row-reverse;
-&::after{
-  background-image: url(../images/servises/bg-scr-red.svg);
+
+.servises__box-right {
+  flex-direction: row-reverse;
+
+  &::after {
+    background-image: url(../images/servises/bg-scr-red.svg);
     right: 0;
     left: 70%;
     top: -20px;
@@ -263,15 +294,396 @@ flex-direction: row-reverse;
 
 // servises end
 
+// Slider start
+.slider {
+  background-image: url(../images/slider/slider-bg2.jpg);
+  background-repeat: repeat-x;
+  padding-top: 100px;
+  padding-bottom: 200px;
+
+  &__box {
+    display: flex !important;
+    padding-left: 60px;
+    margin-top: 30px;
+  }
+
+  &__box-avatar {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: -30px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../images/slider/skoby.svg);
+      background-repeat: no-repeat;
+
+
+    }
+  }
+
+  &__box-img {
+    width: 82px;
+    height: 82px;
+    border-radius: 50%;
+    margin-right: 20px;
+  }
+
+  &__box-info {
+    max-width: 450px;
+    margin-top: 60px;
+  }
+
+  &__box-text {
+    margin-bottom: 24px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -45px;
+      right: 0px;
+      width: 160px;
+      height: 40px;
+      background-image: url(../images/slider/rating.svg);
+      background-repeat: no-repeat;
+      background-size: 100% 90%;
+
+    }
+  }
+
+  &__box-name {
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
+
+  &__box-link {
+    color: #919191;
+  }
+}
+
+.slider__inner {
+  position: relative;
+}
+
+.slider .slick-prev {
+  position: absolute;
+  left: -60px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background-color: none;
+  font-size: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-image: url(../images/slider/arrow-left.svg);
+  cursor: pointer;
+}
+
+.slider .slick-next {
+  position: absolute;
+  right: -60px;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background-color: none;
+  font-size: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-image: url(../images/slider/arrow-right.svg);
+  cursor: pointer;
+}
+
+//slider end
+
+// price section start
+
+.price {
+  margin-bottom: 170px;
+
+  .price__lable {
+    margin-right: 32px;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__info {
+    max-width: 793px;
+  }
+
+  &__info-radio {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 47px;
+
+    input {
+      width: 25px;
+      height: 25px;
+      margin-top: -1px;
+    }
+
+    .input-soon {
+      position: relative;
+      color: #919191;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 83px;
+        height: 30px;
+        right: -33px;
+        top: -20px;
+        background-image: url(../images/soon.svg);
+        background-repeat: no-repeat;
+      }
+    }
+
+    p {
+      margin-right: 32px;
+      font-size: 22px;
+    }
+
+  }
+
+  &__info-form {
+    .price__info-formprofit {
+      width: 100%;
+      margin-bottom: 13px;
+      height: 75px;
+      border: 1px solid #CCCCCC;
+      border-radius: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 18px 20px;
+
+      p {
+        font-size: 28px;
+      }
+    }
+
+  }
+
+  &__info-text-1 {
+    margin-bottom: 31px;
+    color: #919191;
+    ;
+  }
+
+  &__info-text-2 {
+    margin-bottom: 32px;
+  }
+
+  &__btn {
+    background: $blue;
+  }
+
+  &__term-title {
+    font-size: 28px;
+    line-height: 120%;
+    color: #FCA70D;
+    margin-bottom: 8px;
+    margin-top: 41px;
+  }
+
+  &__term-text {
+    font-size: 24px;
+    line-height: 138%;
+
+  }
+}
+
+
+// price section end
+
+// faq section start
+.more__main-title {
+  max-width: 568px;
+  margin: 0 auto;
+  font-size: 24px;
+  line-height: 170%;
+  margin-bottom: 100px;
+}
+
+.more__arrow-down {
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 174px;
+}
 
 
 
+.faq {
+  margin-bottom: 100px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg, rgba(151, 166, 245, 0.6) 0%, rgba(100, 124, 251, 0) 93.94%);
+
+}
+
+// accordion
+.aacordion-container {
+  margin: 0 auto;
+  max-width: 800px
+}
+
+.accordion {
+  border-radius: 10px;
+  background: rgba(245, 245, 245, 1.0);
+  background: -webkit-linear-gradient(top right, rgba(245, 245, 245, 1.0), rgba(218, 236, 238, 1.0));
+  background: -moz-linear-gradient(top right, rgba(245, 245, 245, 1.0), rgba(218, 236, 238, 1.0));
+  background: linear-gradient(to bottom left, rgba(245, 245, 245, 1.0), rgba(218, 236, 238, 1.0));
+
+  &.active {
+    .accordion-content {
+      display: block;
+      margin-bottom: 28px;
+
+    }
+
+    .accordion-heading img {
+      background-image: url(../images/accordion-minus.svg);
+      width: 30px;
+      height: 2px;
+      padding: 0 30px;
+      background-repeat: no-repeat;
+    }
+  }
+
+}
+
+.accordion-heading {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 28px;
+
+  h4 {
+    padding: 19px 99px 16px 28px;
+  }
+
+  img {
+    padding: 0 30px;
+  }
+}
+
+.accordion-content {
+  padding: 0px 150px 20px 28px;
+  display: none;
+  animation: fadeUp .2s linear backwards;
+}
 
 
+// faq section end
+.treal__btn {
+  align-items: center;
+  text-align: center;
+  margin-bottom: 160px;
+}
 
+.title__treal {
+  margin-bottom: 50px;
+}
 
+// footer start
 
+.footer {
 
+  &__social {
+    display: flex;
+    justify-content: end;
+    padding: 16px;
+    align-items: center;
+
+  }
+
+  &__social-text {
+    font-size: 15px;
+    line-height: 130%;
+    margin-right: 23px;
+  }
+
+  &__social-link {
+    margin-right: 7px;
+  }
+
+  &__content {
+    display: flex;
+    padding-top: 40px;
+    border-top: 0.6px solid #919191;
+    border-bottom: 0.6px solid #919191;
+    height: 222px;
+    justify-content: space-evenly;
+  }
+
+  &__content-logo {
+    margin-bottom: 28px;
+  }
+
+  &__content-tel,
+  &__content-email,
+  &__content-instagram {
+    a {
+      font-size: 14px;
+      line-height: 130%;
+      color: #919191;
+    }
+
+  }
+
+  &__content-email {
+    margin-bottom: 20px;
+  }
+
+  &__content-right {
+    display: flex;
+
+    a {
+      display: block;
+    }
+  }
+
+  &__content-items {
+    max-width: 198px;
+    margin-right: 69px;
+  }
+
+  &__content-items-title {
+    font-size: 17px;
+    line-height: 130%;
+    margin-bottom: 20px;
+
+  }
+
+  &__content-item {
+    margin-bottom: 8px;
+  }
+}
+
+.footer {
+  &__copy {
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    color: #919191;
+    font-size: 14px;
+  }
+
+  &__copy-link {
+    margin-left: 44px;
+    color: #919191;
+    font-size: 14px;
+  }
+}
+
+// footer end
 
 
 
