--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -619,7 +619,7 @@
     padding-top: 40px;
     border-top: 0.6px solid #919191;
     border-bottom: 0.6px solid #919191;
-    height: 222px;
+    min-height: 222px;
     justify-content: space-evenly;
   }
 
